# cellfinder-core

./: .cirrus.yml  .codecov.yml  .pre-commit-config.yaml  MANIFEST.in  README.md  notebook_det_and_classif_dask.py  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: test_and_deploy.yml  test_include_guard.yaml  test_numba_off.yml
benchmarks/: README.md  asv.conf.json
benchmarks/benchmarks/: basic_benchmarks.py  imports.py  sample_benchmarks.py  tools.py
benchmarks/benchmarks/tools/: IO.py  prep.py
cellfinder_core/: __init__.py  main.py
cellfinder_core/classify/: classify.py  cube_generator.py  tools.py
cellfinder_core/detect/: __init__.py  detect.py
cellfinder_core/detect/filters/volume/: multiprocessing.py
cellfinder_core/download/: download.py  models.py
cellfinder_core/extract/: extract_cubes.py
cellfinder_core/tools/: prep.py  source_files.py
src/cellfinder_core/: __init__.py  tensorflow_handle.py
src/cellfinder_core/classify/: classify.py  cube_generator.py  resnet.py  tools.py
src/cellfinder_core/detect/: detect.py
src/cellfinder_core/detect/filters/plane/: __init__.py  classical_filter.py  plane.py  plane_filter.py
src/cellfinder_core/detect/filters/volume/: multiprocessing.py  structure_detection.py  structure_detection.pyx  volume_filter.py
src/cellfinder_core/tools/: tf.py
src/cellfinder_core/train/: train_yml.py
tests/tests/: conftest.py
tests/tests/test_integration/: test_detection.py  test_extract.py  test_train.py
tests/tests/test_unit/test_tools/: test_IO.py
(+1 files in other folders)
