[build-system]
requires = ['setuptools>=45', "setuptools_scm>=6.2", 'wheel', 'cython']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "src/cellfinder_core/_version.py"

[tool.black]
target-version = ['py36', 'py37', 'py38']
skip-string-normalization = false
line-length = 79
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | examples
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-*"
